    - debian/background.xpm
    - debian/dmrc
    - debian/gdm.conf
    - debian/mplayer-config
    - debian/mythbuntu-gdm.conf
    - debian/mythtv-xsession.desktop
    - debian/openbox-menu.xml
    - debian/startmythtv.sh
    - debian/ubuntu-mythtv-frontend.postinst
    - debian/ubuntu-mythtv-frontend.prerm
  * debian/rules:
    - Drop references to ubuntu-mythtv-frontend
  * debian/session-settings:
    - Drop some references to ubuntu-mythtv-frontend
  * debian/mythtv_0.20.1.sql:
    - Drop, we're at 0.21 now!
  * debian/mythsql:
    - Drop old unused script.
  * debian/mythtv-backend.NEWS:
    - Drop quite old NEWS file.  We're not updating it anyway.

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 13 Dec 2008 21:32:03 -0600

mythtv (0.21.0+fixes19136-0ubuntu1) jaunty; urgency=low

  [ Thomas Mashos ]
  * Updated posters dir to /var/lib/mythtv/posters

  [ Michael Haas ]
  * New upstream snapshot.
  * Added size restriction to frontend and backend logs (10M)
    - (LP: #250776)
  * debian/patches:
    - Add 29_mythwelcome_fix.dpatch to prevent MythWelcome from quitting
      spuriously (backports revision 18671 from trunk)

  [ Dustin Kirkland ]
  * debian/mythtv-database.config: test the validity of the input mysql
    passphrase, up to 5 times (LP: #243504)

  [ Mario Limonciello ]
  * debian/mythtv-database.postinst:
    - Clean up old code calls
    - Adjust for changes to .config
    - Make sure to clear root password
  * debian/mythtv-common.config:
    - Read mysql.txt before starting
  * debian/mythtv-common.postinst:
    - Clean up old file checks that are unnecessary.

 -- Mario Limonciello <superm1@ubuntu.com>  Sat, 13 Dec 2008 18:39:01 -0600

mythtv (0.21.0+fixes18722-0ubuntu1) intrepid; urgency=low

  * Sync against release-0-21-fixes branch. Fixes:
    - (LP: #260429)
  * Update 24_fix_h264_frame_counting.dpatch to incorporate changeset
    18542 from trunk <http://svn.mythtv.org/trac/changeset/18542>
  * debian/patches/: