@@ -191,14 +191,14 @@ install: build
 
 	dh_install -pmythtv-database debian/mythtv-reconfigure-required.update-notifier usr/share/mythtv
 	dh_install -pmythtv-database debian/mythtv.cnf etc/mysql/conf.d
-	dh_install -pmythtv-database debian/mythtv_0.21.0.sql usr/share/mythtv/sql
+	dh_install -pmythtv-database debian/*.sql usr/share/mythtv/sql
 # Build architecture-independent files here.
 # Pass -i to all debhelper commands in this target to reduce clutter.
 binary-indep: build install
 	dh_testdir -i
 	dh_testroot -i
 	dh_installdebconf -i
-	dh_installdocs -A README debian/README.Debian AUTHORS FAQ UPGRADING keys.txt
+	dh_installdocs -A README AUTHORS FAQ UPGRADING keys.txt
 	dh_installdocs -pmythtv-backend contrib/firewire_tester-README
 	dh_installdocs -pmythtv-doc docs/mythtv-HOWTO*
 	dh_installexamples -pmythtv-doc contrib/configfiles/*
@@ -219,7 +219,7 @@ binary-indep: build install
 binary-arch: build install
 	dh_testdir -a
 	dh_testroot -a
-	dh_installdocs -a -A README debian/README.Debian AUTHORS keys.txt FAQ UPGRADING
+	dh_installdocs -a -A README AUTHORS keys.txt FAQ UPGRADING
 	dh_installdebconf -a
 	dh_installexamples -a
 	dh_installmenu -a
@@ -234,7 +234,6 @@ binary-arch: build install
 	dh_fixperms -a
 	dh_makeshlibs -a -V -Xusr/lib/mythtv/filters
 	dh_installdeb -a
-#	dh_shlibdeps -a -ldebian/libmyth-0.19/usr/lib
 	dh_shlibdeps -a
 	dh_gencontrol -a
 	dh_md5sums -a
